projects/08-health-api-jenkins/k8s_deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: health-app-stack        # <--- This must be a simple name
  namespace: monitoring            # <--- Ensure this matches your Service
spec:
  replicas: 2
  selector:
    matchLabels:
      app: health-app-stack
  template:
    metadata:
      labels:
        app: health-app-stack
    spec:
      containers:
      - name: health-api
        image: docker.io/musabalaaudu/health-api:31  # <--- The "slash" belongs HERE
        ports:
        - containerPort: 80
