projects/08-health-api-jenkins/k8s_service.yaml
apiVersion: v1
kind: Service
metadata:
  name: health-api-service
spec:
  type: NodePort
  selector:
    app: health-api
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
      nodePort: 30080
