projects/08-health-api-jenkins/k8s_ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: health-api-ingress
  namespace: monitoring
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
  - host: health.kaduna.hub
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: health-api-service
            port:
              number: 80
